--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.11",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.11",
     "@angular/compiler": "~8.2.11",
     "@angular/core": "~8.2.11",
@@ -20,9 +21,12 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "ng2-currency-mask": "^5.3.1",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0-rc.1",
+    "primeng": "^9.0.0-rc.2",
     "rxjs": "~6.4.0",
+    "tether": "^1.4.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
