--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.11",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "ng2-currency-mask": "^5.3.1",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.2",
@@ -51,6 +52,4 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
-
-  
 }
